feat: basic licensing

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -43,3 +43,16 @@ databaseChangeLog:
                     nullable: false
                     unique: true
                     uniqueConstraintName: ix_auth_username
+  - changeSet:
+      id: 2
+      author: flux
+      changes:
+        - createTable:
+            tableName: licenses
+            columns:
+              - column:
+                  name: license_value
+                  type: varchar(50)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
